--- a/.env
+++ b/.env
@@ -3,7 +3,10 @@ PORT=8000
 LOCAL_HOST=127.0.0.1
 
 DATABASE_HOST=starwar_db
-DATABASE_PORT=37827
+DATABASE_PORT=3306
 DATABASE_NAME=starwar
 DATABASE_USERNAME=root
 DATABASE_PASSWORD=root
+
+DATABASE_POOL_MIN=1
+DATABASE_POOL_MAX=4
