Final fixes before submission

--- a/.env
+++ b/.env
@@ -8,5 +8,4 @@ DATABASE_NAME=starwar
 DATABASE_USERNAME=root
 DATABASE_PASSWORD=root
 
-DATABASE_POOL_MIN=1
-DATABASE_POOL_MAX=4
+SWAPI_BASE_URL="https://swapi.co/api/films/"
